--- a/primeFactorization.html
+++ b/primeFactorization.html
@@ -1,5 +1,14 @@
 <html>
+    <head>
+        <script type="text/javascript">
+            function factorTheKey()
+                {
+                    
+                }
+        </script>
+    </head>
     <body>
         <input type="file"><br/>
+        <input onclick="factorTheKey()" type="button">Submit</input>
     </body>
 </html>
