--- a/primeFactorization.html
+++ b/primeFactorization.html
@@ -3,12 +3,12 @@
         <script type="text/javascript">
             function factorTheKey()
                 {
-                    
+                    var keyFileInput = document.getElementById("keyFileInput");
                 }
         </script>
     </head>
     <body>
-        <input type="file"><br/>
+        <input id="keyFileInput" type="file"><br/>
         <input onclick="factorTheKey()" type="button">Submit</input>
     </body>
 </html>
